--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,30 @@
-#Pasta de modulos
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
 build/
 
-#Configuração Sistema
+#Miscellaneous
 .ENV
 yarn.lock
 
-#Miscellaneous
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 .vscode
 *.sublime-project
 *.sublime-workspace
+backend/node_modules/.bin/rc
+backend/node_modules/.bin/atob
